# E-commerce

./: 14.2_main.py  15.1_main.py  README.md  pyproject.toml
src/: category.py  product.py
tests/: conftest.py  test_category.py  test_product.py  test_products.py  test_utils.py
