[project]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgeniy Alekseev",email = "e7777777a@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
